# ahead

./: Cargo.toml  Info.plist  README.md
.githooks/: pre-commit
.github/workflows/: code-check.yml  shell-check.yml
docs/document_yaml_schemas/requirements/: requirements.yaml
docs/document_yaml_schemas/specifications/application/: design_tokens.yaml  navigation_flows.yaml  requirements.yaml  screen.yaml  theme.yaml  ui_design.yaml
docs/document_yaml_schemas/specifications/domain/: domain_services.yaml  entities.yaml  repositories.yaml  usecases.yaml  value_objects.yaml
docs/requirements/: requirements_definition_todo.md
docs/requirements/common/: requirements.yaml
docs/requirements/features/calendar_sync/: requirements.yaml
docs/requirements/features/reminder_display/: requirements.yaml
src/: lib.rs  main.rs
