[package]
name = "ahead"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = { version = "0.5.2", features = ["exception"] }
objc2-foundation = { version = "0.2.2", features = ["all"] }
objc2-event-kit = { version = "0.2.2", features = ["all"] }
tokio = { version = "1.34.0", features = ["full"] }
block2 = "0.5.1"
iced = "0.13.1"
iced_futures = "0.13.2"

[lib]
name = "ahead"
path = "src/lib.rs"

[[bin]]
name = "ahead"
path = "src/main.rs"

[package.metadata.bundle]
name = "Ahead"
identifier = "com.example.ahead"
icon = []
version = "0.1.0"
resources = []
